[package]
name = "dcentrald-asic"
version.workspace = true  # Single source: dcentrald/Cargo.toml [workspace.package]
edition = "2021"
description = "ASIC chip driver subsystem for dcentrald - ChipDriver trait, protocol, PIC control"
license = "GPL-3.0"

[dependencies]
dcentrald-api-types = { path = "../dcentrald-api-types" }
dcentrald-common = { path = "../dcentrald-common" }  # pure no-HAL helpers (dspic_decode rail-readback guard)
dcentrald-hal = { path = "../dcentrald-hal" }
thiserror.workspace = true
bytes.workspace = true
tracing.workspace = true
libc = "0.2"

[features]
default = []
# Host-only golden/replay harness support. This only propagates the HAL's
# non-shipping simulator symbols; production/default builds remain unchanged.
sim-hal = ["dcentrald-hal/sim-hal"]
# `recovery-tool` retains host-testable protocol research for dsPIC fw86 and
# PIC1704. No shipped binary enables it: the former `pic-recovery` executor was
# removed because caller-provided identity and confirmation were not hardware
# authority. Production code therefore cannot link these symbols. A future
# recovery executor must use discovered endpoints, manifested artifacts,
# target-bound single-use permits, readback verification, and fault injection
# before this feature can gain a runtime consumer.
recovery-tool = []
# `scrypt-l7` compiles the ScryptL7 (L7 / BM1489 Litecoin **Scrypt**) chip driver
# — DCENT_OS's first non-SHA256 driver (W3-B kickoff). DEFAULT-OFF so production
# SHA256 builds are byte-unchanged. When enabled, chip-id 0x1489 dispatches to
# the W3-A-accurate ScryptL7 driver in the scaffold registry (still fail-closed
# for live bring-up: the L7 chain-FIFO transport is deferred). See
# `src/drivers/scrypt_l7.rs` and .
scrypt-l7 = []

[dev-dependencies]
dcentrald-re-catalog = { path = "../dcentrald-re-catalog" }
dcentrald-silicon-profiles = { path = "../dcentrald-silicon-profiles" }
proptest = { workspace = true }
serde_json = { workspace = true }

# W4.7 lint inheritance (DCENT_DevOps + DCENT_QA, 2026-05-07).
# This crate has ~35 grandfathered unwrap/expect/panic occurrences in src/.
# Most are inside fixed-size frame builders (BM1362/BM1366/BM1368/BM1387)
# where indexing into a known-size buffer is correct. Inherit workspace
# `warn` for now — audit migrate to typed errors during driver hardening.
# Audit status: .
# cargo 1.95+: per-crate overrides cannot coexist with `[lints] workspace = true`.
[lints.clippy]
unwrap_used = "allow"
expect_used = "allow"
panic = "allow"
indexing_slicing = "allow"
unwrap_in_result = "allow"
