[package]
name = "dcentrald-common"
version.workspace = true  # Single source: dcentrald/Cargo.toml [workspace.package]
edition = "2021"
description = "Shared no-HAL contract utilities for dcentrald (wallet masking, log sanitization, etc.)"
license = "GPL-3.0"

# This crate is intentionally HAL-free, OS-free, and async-runtime-free, in the
# same spirit as `dcentrald-api-types`. It must compile cleanly on Windows host
# for fast unit-test cycles.

[dependencies]
# Cross-firmware, host-safe hardware enablement contract. This is a local
# schema dependency (no HAL, OS, async runtime, or hardware I/O).
dcent-schema = { path = "../../../shared/dcent-schema" }

# No regex dependency. Wallet-mask scanners stay hand-rolled to avoid pulling
# in ~500KB of compiled regex machinery for ~7 character-class checks.

[dev-dependencies]
proptest = { workspace = true }

# W4.7 lint inheritance (DCENT_DevOps + DCENT_QA, 2026-05-07).
# Near-clean crate: ~1 unwrap occurrence in src/. Inherit workspace `warn`
# directly — this crate is the easiest first promote-to-`deny` candidate.
# Audit status: .
[lints]
workspace = true
