[package]
name = "dcentrald-stratum"
version.workspace = true  # Single source: dcentrald/Cargo.toml [workspace.package]
edition = "2021"
description = "Stratum V1/V2 mining protocol client for dcentrald"
license = "GPL-3.0"

[dependencies]
# W1.4 wallet-mask: shared no-HAL helper for sanitizing wallet addresses
# from log emission. See `dcentrald-common/src/wallet_mask.rs` for the
# threat model and detection rules. Used by `worker=` / `username=`
# log fields in the V1 + V2 clients before any tracing macro fires.
dcentrald-common = { path = "../dcentrald-common" }
# Wave D (RE-006 closure, 2026-05-19): pool_failover module re-uses the
# pure DTO catalog (LuxosPoolState, LuxosFailoverTrigger, config + helpers)
# from the no-HAL api-types crate. See
#  §RE-006.
dcentrald-api-types = { path = "../dcentrald-api-types" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
sha2.workspace = true
bytes.workspace = true

hex = "0.4"
rand = "0.8"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
webpki-roots = "1"

# SV2 dependencies (feature-gated, default ON)
# secp256k1 = C bindings with native ElligatorSwift (BIP324 Noise handshake)
# chacha20poly1305 = pure-Rust AEAD cipher
# Cross-compile requires zig cc (set CC_armv7_unknown_linux_musleabihf)
chacha20poly1305 = { version = "0.10", optional = true }
secp256k1 = { version = "0.29", features = ["alloc", "rand-std", "global-context"], optional = true }
rand_core = { version = "0.6", features = ["getrandom"], optional = true }
# k256 kept as fallback for environments without C cross-compiler
k256 = { version = "0.13", features = ["ecdh", "arithmetic"], optional = true }

[features]
default = ["sv2", "jd"]
sv2 = ["dep:chacha20poly1305", "dep:secp256k1", "dep:rand_core"]
sv2-pure-rust = ["dep:chacha20poly1305", "dep:k256", "dep:rand_core"]
jd = ["sv2"]  # Job Declaration and Template Distribution primitives

# W3-B (2026-07-07): coin-parameterization seam for DCENT_OS's first non-SHA256
# coin (Litecoin/Scrypt, L7/BM1489). DEFAULT-OFF so production SHA-256 builds are
# byte-unchanged. Compiles the `coin` module (`CoinParams`) that composes the
# always-present `scrypt.rs` wire contracts into a per-coin descriptor. Purely
# additive — the Bitcoin/SHA-256d path is untouched. Mirrors the same-named
# feature in `dcentrald-asic`. See `src/coin.rs`.
scrypt-l7 = []

# DCENT_Protocol + DCENT_QA W9.3 — Mock SV2 pool harness used by the
# `tests/sv2_multi_pool.rs` integration test (OCEAN + DEMAND/SRI styles).
# This compiles the server-side Noise_NX handshake + frame builders into
# the crate so the test can drive `StratumV2Client` against an in-process
# mock pool without bringing the full `secp256k1`/`chacha20poly1305`
# stack into a separate test-only crate.
#
# **NEVER** ship a production binary with `mock-pool` enabled — the
# helpers expose deterministic-seed handshake bypass shims that would
# weaken pool authentication. Production builds use the default feature
# set (`sv2`, `jd`) only. The CI gate in `cross-compile-matrix.yml` runs
# the test suite with `--features mock-pool` and confirms `cargo check
# --workspace` (no `--features mock-pool`) is unaffected.
mock-pool = ["sv2"]

# W9.3 — dev-only deps for the broad-pool integration test
# (`tests/sv2_multi_pool.rs`). `tracing-subscriber` is the same version
# used elsewhere in the workspace so the dev profile shares its pre-built
# crate. Do NOT promote these to runtime [dependencies] — the production
# `dcentrald` binary already wires its own subscriber from the workspace
# dep, and pulling it into this crate's regular deps would force every
# downstream consumer to link it.
[dev-dependencies]
tracing-subscriber = { workspace = true }
proptest = { workspace = true }
# `tokio` is already a workspace dep with `features = ["full"]` — that
# already includes `macros`, `rt-multi-thread`, and `time` so the
# `#[tokio::test]` proc-macro and the multi-threaded runtime in
# `tests/sv2_multi_pool.rs` work out of the box. We re-list it here
# only for documentation; cargo will deduplicate.
tokio = { workspace = true }

# W4.7 lint inheritance + grandfather override (DCENT_DevOps + DCENT_QA, 2026-05-07).
# Highest count in the workspace at ~316 grandfathered unwrap/expect/panic
# occurrences in src/. Stratum V1 + V2 client + JD primitives carry a lot of
# JSON parsing + binary frame decoding that currently uses `.unwrap()` at
# proven-validated boundaries. Lints are downgraded to `allow` here. Audit
# status: .
# cargo 1.95+: per-crate overrides cannot coexist with `[lints] workspace = true`.
[lints.clippy]
unwrap_used = "allow"
expect_used = "allow"
panic = "allow"
indexing_slicing = "allow"
unwrap_in_result = "allow"
