[package]
name = "pic-recovery"
version.workspace = true  # Single source: dcentrald/Cargo.toml [workspace.package]
edition = "2021"
description = "PIC16F1704 firmware recovery tool for bricked S9 hash board PICs"
license = "GPL-3.0"

[[bin]]
name = "pic-recovery"
path = "src/main.rs"

[[bin]]
name = "dspic-flash"
path = "src/dspic_flash_main.rs"

[dependencies]
libc = "0.2"
flate2 = "1"
# Enable `recovery-tool` so this crate has access to dspic_flash::*.
# The main `dcentrald` binary does NOT enable this feature, so destructive
# dsPIC ops (RESET 0x07, JUMP 0x06, ERASE 0x09, SEND_DATA 0x14, reflash())
# are not linkable from the daemon — calling them is a compile error.
dcentrald-asic = { path = "../dcentrald-asic", features = ["recovery-tool"] }
# Same gate on the HAL: only this binary (and the `dspic-flash` companion)
# may call `I2cBus::open_for_recovery`. The single-I2C-owner contract on
# am2 forbids the daemon from constructing raw `I2cBus` handles. See
# W2.3 lockdown notes in `dcentrald-hal/src/i2c.rs`.
dcentrald-hal = { path = "../dcentrald-hal", features = ["recovery-tool"] }

# W4.7 lint inheritance (DCENT_DevOps + DCENT_QA, 2026-05-07).
# Near-clean crate: ~2 unwrap occurrences in src/. Recovery binary, so
# panic-on-precondition is sometimes the right semantic (operator must
# confirm `--confirm-bricked`). Inherit workspace `warn`.
# Audit status: .
[lints]
workspace = true
