[package]
name = "pic-recovery"
version.workspace = true  # Single source: dcentrald/Cargo.toml [workspace.package]
edition = "2021"
description = "Fail-closed controller inspection and recovery-availability diagnostics"
license = "GPL-3.0"

[[bin]]
name = "pic-recovery"
path = "src/main.rs"

[[bin]]
name = "dspic-flash"
path = "src/dspic_flash_main.rs"

[dependencies]
libc = "0.2"
dcentrald-fabric-lease = { path = "../dcentrald-fabric-lease" }

# W4.7 lint inheritance (DCENT_DevOps + DCENT_QA, 2026-05-07).
# Near-clean crate: ~2 unwrap occurrences in src/. Recovery binary, so
# panic-on-precondition is sometimes the right semantic (operator must
# confirm `--confirm-bricked`). Inherit workspace `warn`.
# Audit status: .
[lints]
workspace = true
